# voting_station

./: .env  .gitignore  README.md  conncurrent_start.py  notes.txt  package-lock.json  package.json  schema_creation.js
BLE_pollination/: app.js  fetch-questions.js  multi-votes.js  peripheral.js  pollination-api.js  polling-service.js  polling.js  single-votes.js  vote-handler.js
BLE_pollination/express_server/: package.json
BLE_pollination/utils/: password.js  pollination-api.js
admin_UI/: index.html  main.js  preload.js
admin_UI/servers/: admin_express_server.js
code examples/: schema_creation.js
code examples/mongoDB_setup/: init-database.js
code examples/mongoDB_tasks/: March_10.js  March_10_client.js  app.js  election.js  package-lock.json  package.json
not_in_use/: app.js
pollination/: multi-votes.js  peripheral.js  pollination-api.js  polling-service.js
pollination/express_server/: app.js
touchscreen_electron/: .env  admin.html  index.html  kill_node_processes.sh  main.js  package-lock.json  package.json  preload.js
touchscreen_electron/pages/: admin.html  voting.html
touchscreen_electron/servers/: adminExpressServer.js  admin_express_server.js  bleMockSending.js  votingExpressServer.js  voting_express_server.js
touchscreen_electron/utils/: central_pi.js  load-questions.js  (+2 more)
touchscreen_electron/utils/export_tool/crc32/: CMakeLists.txt  bit_handler.c  bit_handler.h  decode_crc32.c  encode_crc32.c  input_handler.c  input_handler.h
utils/: dateFormat.js  pollination-api.js  pollinationAPI.js  process.js  startProcess.js  tests.js
(+36 files in other folders)
